checker/tests/output/subtyping-variants/ill-typed/variants-1.stella
ERROR_UNEXPECTED_VARIANT_LABEL
